syntax = "proto3";

package com.gdn.marketplace.product.grpc;

option java_multiple_files = true;
option java_package = "com.gdn.marketplace.product.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc SearchProducts (SearchProductsRequest) returns (SearchProductsResponse);
}

message GetProductRequest {
  string id = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
}

message SearchProductsRequest {
  string query = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
}

message SearchProductsResponse {
  repeated ProductResponse products = 1;
}
